--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848491'>Handle runtime crashes on SkiaRenderer with Vulkan.</a></td><td>suyambu.rm</td></tr>
+<tr><td>2018-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/853736'>Get rid of the parameter |url| of *{Run/Display}ContentWithCertificateErrors().</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/852602'>Change EAnimPlayState to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2017-12-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844009'>Fixing names of password_manager PasswordExport feature.</a></td><td>nikhil</td></tr>
 <tr><td>2018-01-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/851714'>Change QuoteType to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846605'>feature_engagement: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846583'>download: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
