--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/850154'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
+<tr><td>2018-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/852603'>Upstream some of the track tests</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/851936'>Fixing names of password_manager AffiliationBasedMatching feature.</a></td><td>nikhil</td></tr>
+<tr><td>2018-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/853798'>Set CSS filter invert() default argument as 0.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848491'>Handle runtime crashes on SkiaRenderer with Vulkan.</a></td><td>suyambu.rm</td></tr>
 <tr><td>2018-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/853736'>Get rid of the parameter |url| of *{Run/Display}ContentWithCertificateErrors().</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/852602'>Change EAnimPlayState to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
