--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848694'>Implement relList attribute for HTMLAnchorElement</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/856282'>IDL: Required [Exposed] to get rid of [PrimaryGlobal]</a></td><td>Pramod B S</td></tr>
+<tr><td>2018-01-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/851753'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-12-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/845251'>Don't suppress size_t to int warnings in blink/core</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/852597'>Remove ComputeVisibleArea() from LocalFrameView.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/853815'>Delete totalDownloadSize of BackgroundFetchRegistration</a></td><td>Zhuoyu Qian</td></tr>
