--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/795591'>Convert ChromeViewMsg_SetAsInterstitial to use mojo.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2018-01-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848694'>Implement relList attribute for HTMLAnchorElement</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2018-01-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/856282'>IDL: Required [Exposed] to get rid of [PrimaryGlobal]</a></td><td>Pramod B S</td></tr>
 <tr><td>2018-01-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/851753'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
