--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,11 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/856298'>Move two global functions from EditingStrategy.cpp to EditingUtilities.cpp</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/856025'>Removed unused media resources</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/853797'>Delete deprecated CONTENT_SETTINGS_TYPE_PROMPT_NO_DECISION_COUNT</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2017-12-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/836573'>Convert UpdateBrowserControlsState messages to use mojo.</a></td><td>cm.sanchi</td></tr>
+<tr><td>2018-01-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/856381'>Move HasClassName() to |Element| class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/795591'>Convert ChromeViewMsg_SetAsInterstitial to use mojo.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2018-01-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848694'>Implement relList attribute for HTMLAnchorElement</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2018-01-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/856282'>IDL: Required [Exposed] to get rid of [PrimaryGlobal]</a></td><td>Pramod B S</td></tr>
