--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,13 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/859137'>Upstream regions-webvtt tests</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844452'>Location toString function should be enumerable</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/856416'>InsertListCommand crash while cleanup</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/858983'>Implement relList attribute for HTMLAreaElement</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/858936'>Migrate Transpose() into ExecuteTranspose() in EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/858982'>Move AdjustedSelectionStartForStyleComputation() to "EditingStyleUtilitie.cpp"</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/855999'>Remove redundant if condition</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/856298'>Move two global functions from EditingStrategy.cpp to EditingUtilities.cpp</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/856025'>Removed unused media resources</a></td><td>Sriram</td></tr>
 <tr><td>2018-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/853797'>Delete deprecated CONTENT_SETTINGS_TYPE_PROMPT_NO_DECISION_COUNT</a></td><td>Zhuoyu Qian</td></tr>
