--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,14 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861372'>Added test to verify [SameObject] works for relList attribute</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861380'>Used  |override| for Trace and TraceWrappers function</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/858990'>Move RootEditableElementOrTreeScopeRootNodeOf() to EditingUtilities.cpp</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/858937'>IDL: Required [Exposed] to get rid of [PrimaryGlobal]</a></td><td>Pramod B S</td></tr>
+<tr><td>2018-01-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/860433'>Remove applet from all-named elements</a></td><td>Rob Buis</td></tr>
+<tr><td>2018-01-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/858620'>Change OffsetRotationType to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/859138'>Make some public variables of ComputedStylePropertyMap to be private.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/850655'>Switch ntp_snippets enums to be enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/859137'>Upstream regions-webvtt tests</a></td><td>Sriram</td></tr>
 <tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844452'>Location toString function should be enumerable</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2018-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/856416'>InsertListCommand crash while cleanup</a></td><td>tanvir.rizvi</td></tr>
