--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/859262'>Move AdjustSelectionWithTrailingWhitespace() to SelectionController</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861690'>[css-typed-om] CSSNumericValue.to should return CSSUnitValue</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861552'>Get rid of ToCSSPropertyValue().</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861372'>Added test to verify [SameObject] works for relList attribute</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2018-01-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861380'>Used  |override| for Trace and TraceWrappers function</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2018-01-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/858990'>Move RootEditableElementOrTreeScopeRootNodeOf() to EditingUtilities.cpp</a></td><td>Zhuoyu Qian</td></tr>
