--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,11 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861687'>Move |Range::CreateAdjustedToTreeScope()| to "Document.cpp"</a></td><td>Pramod B S</td></tr>
+<tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/863543'>Move {Previous/Next}ParagraphPosition() to SelectionModifier.cpp</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/839841'>InsertText crash when DOM change.</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/863344'>Remove 'FIXME' which is not required as per specification</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861592'>Fix for crash in InsertListCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/859262'>Move AdjustSelectionWithTrailingWhitespace() to SelectionController</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861690'>[css-typed-om] CSSNumericValue.to should return CSSUnitValue</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861552'>Get rid of ToCSSPropertyValue().</a></td><td>Zhuoyu Qian</td></tr>
