--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,63 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874974'>installer: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/875571'>Upstream track-webvtt-non-snap* and track-webvtt-two-cue-layout* tests</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/867800'>HTMLLinkElement relList attribute should be [SameObject]</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/851519'>Fixing names of password_manager EnableManualSaving feature.</a></td><td>nikhil</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861601'>Emit "input" event on activation behavior for CheckBox</a></td><td>Shanmuga Pandi M</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874030'>remoting: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874031'>chromecast: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/873890'>ios: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874250'>search_engines: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874033'>safe_browsing: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874170'>media: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874172'>ssl: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874171'>predictors: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/873252'>page_load_metrics: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/872990'>Upstream track-cue-rendering-after-controls-[added|removed].html tests</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866652'>IndexedDB: Reduce IDBAny usage in IDBRequest</a></td><td>Xunran Ding</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/872555'>Upstream svg/dom/SVGAnimated*.html to web-platform-tests</a></td><td>Shanmuga Pandi M</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/869916'>Add TextIteratorBehavior to suppress extra newline</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/850157'>Clean up defining of enums in AXObject</a></td><td>DongJun Kim</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/869873'>Change SVGAnimatedPath::CssValue() to return |CSSValue&amp;|</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/870011'>Rename |leadingWhitespacePosition()| to |leadingCollapsibleWhitespacePosition()|</a></td><td>Pramod B S</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/602087'>Move SelectionTemplate:is_directional to FrameSelection</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2018-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/870530'>ui: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/867130'>chromeos: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/867171'>extensions: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866618'>Change SVGAnimatedLength::CssValue() to return |CSSValue&amp;|</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/869912'>Added DCHECK() for kDocumentAllNamedItems in HTMLNameCollection destructor</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/863302'>Change RenderedPosition::RootBox() to return |const RootInlineBox*|</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/868410'>Fix for crash with InsertListCommand</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2018-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866470'>previews: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/868091'>IDL: Required [Exposed] to get rid of [PrimaryGlobal]</a></td><td>Pramod B S</td></tr>
+<tr><td>2018-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866619'>Modified location |href| atribute type from DOMString to USVString</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866473'>bookmarks: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866472'>sessions: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866271'>signin: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/867188'>Upstream track-cues-rendering-[line*, transformed*] tests</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866450'>reading_list: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/867175'>policy: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861585'>Simplify SelectionModifier class</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866410'>safe_browsing: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/867131'>vr: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/867172'>android: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846560'>Modify Document |All| namedItem return type from NodeList to HTMLCollection</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866352'>subresource_filter: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866411'>variations: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866621'>webui: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866598'>Upstream track-cues-* tests</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/853793'>Fixing names of password_manager enable-password-force-saving feature.</a></td><td>nikhil</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866278'>Change TextEmphasisPosition to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/865735'>Make SelectionModifier::GetFrame() to return |const LocalFrame&amp;|</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/866275'>Make StringKeyframe::value_ be a const CSSValue.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848434'>Convert PrerenderDispatcher Messages to use mojo.</a></td><td>cm.sanchi</td></tr>
+<tr><td>2018-01-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844306'>Fixing names of password_manager ProtectSyncCredentialOnReauth feature.</a></td><td>nikhil</td></tr>
+<tr><td>2018-01-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861591'>Change CSSBoxType to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/863270'>Support negative timestamps of TextTrackCue</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861682'>IndexedDB: Reduce IDBAny usage in IDBCursor</a></td><td>Xunran Ding</td></tr>
+<tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/863265'>Move MediaDevicesPermissionChecker to MediaDevicesManager</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861687'>Move |Range::CreateAdjustedToTreeScope()| to "Document.cpp"</a></td><td>Pramod B S</td></tr>
 <tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/863543'>Move {Previous/Next}ParagraphPosition() to SelectionModifier.cpp</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/839841'>InsertText crash when DOM change.</a></td><td>tanvir.rizvi</td></tr>
