--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,23 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/877366'>MessageEvent |type| should not be optional</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874230'>permissions: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/872513'>Reorganize EditingUtilities</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/872991'>Make AddPropertyToPresentationAttributeStyle() take a const CSSValue&amp;</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844534'>Make Pepper subscribe and handle device change event on its own</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844303'>Migrate MediaDevices devicechange event processing from content to Blink</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/869638'>Move MediaDeviceSaltAndOriginCallback to MediaDevicesManager</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/826925'>Add undefined value in aria-selected</a></td><td>DongJun Kim</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/875517'>IndexedDB: Simplify IDBAny type</a></td><td>Xunran Ding</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/699959'>Remove ImageCapture.setOptions()</a></td><td>nikhil</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874974'>installer: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/875571'>Upstream track-webvtt-non-snap* and track-webvtt-two-cue-layout* tests</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/867800'>HTMLLinkElement relList attribute should be [SameObject]</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/851519'>Fixing names of password_manager EnableManualSaving feature.</a></td><td>nikhil</td></tr>
+<tr><td>2018-01-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/861601'>Emit "input" event on activation behavior for CheckBox</a></td><td>Shanmuga Pandi M</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874030'>remoting: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874031'>chromecast: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/873890'>ios: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874250'>search_engines: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874033'>safe_browsing: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
