--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/877365'>Move TrailingWhitespacePosition() to DeleteSelectionCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/875579'>Modified document.all.item method return type to HTMLCollection object</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2018-01-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/877366'>MessageEvent |type| should not be optional</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2018-01-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874230'>permissions: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/872513'>Reorganize EditingUtilities</a></td><td>Zhuoyu Qian</td></tr>
