--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/877741'>[css-typed-om] StylePropertyMap.set should not be exposed to worklet.</a></td><td>nikhil</td></tr>
+<tr><td>2018-01-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/880425'>IDL: Required [Exposed] to get rid of [PrimaryGlobal]</a></td><td>Pramod B S</td></tr>
 <tr><td>2018-01-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/877745'>Use SelectionTemplate::IsBaseFirst() in SelectionForUndoStep::From()</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/880081'>Use SelectionTemplate::IsBaseFirst() in DOMSelection.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/877365'>Move TrailingWhitespacePosition() to DeleteSelectionCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
