--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/874032'>google_apis: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/880263'>MessageEvent initMessageEvent should throw error in case of no argument</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2018-01-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/877741'>[css-typed-om] StylePropertyMap.set should not be exposed to worklet.</a></td><td>nikhil</td></tr>
 <tr><td>2018-01-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/880425'>IDL: Required [Exposed] to get rid of [PrimaryGlobal]</a></td><td>Pramod B S</td></tr>
