--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/677144'>Add autoComplete IDL attribute to textArea and select element.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2018-01-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/877739'>Fix for crash in IsTabHTMLSpanElement</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-01-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/706445'>Rename LayoutObjectIsFocusable to IsFocusableStyle</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/877660'>Update logic to avoid VisibleSelection is_directional.</a></td><td>tanvir.rizvi</td></tr>
