--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/881381'>[css-typed-om] fallback attribute should be readonly attribute</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-01-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/883862'>Serialize prefixes for HTML fragments correctly</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-01-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/867799'>Announce drag-and-drop operations will be deprecated in A11y.</a></td><td>deejay</td></tr>
 <tr><td>2018-01-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/677144'>Add autoComplete IDL attribute to textArea and select element.</a></td><td>Shanmuga Pandi M</td></tr>
