--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/850252'>InsertOrderedList creates incorrect selection</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2018-01-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/890558'>[css-typed-om] values attribute should be readonly</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-01-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/886205'>[Cleanup] Remove an outdated comment about InputType.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/886646'>Serialize Text nodes for HTML fragments correctly</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-01-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/881381'>[css-typed-om] fallback attribute should be readonly attribute</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-01-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/883862'>Serialize prefixes for HTML fragments correctly</a></td><td>Rob Buis</td></tr>
