--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/890959'>Support MediaList |toString| method</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2018-01-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/878101'>Fixing names of password_manager kEnableHtmlBasedUsernameDetector feature.</a></td><td>nikhil</td></tr>
 <tr><td>2018-01-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/850252'>InsertOrderedList creates incorrect selection</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-01-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/890558'>[css-typed-om] values attribute should be readonly</a></td><td>Hwanseung Lee</td></tr>
